Added ingredients and basic styling. Added 2 steps, rest are pending. Will close it by EOD 17th July 2023

--- a/recipes/chicken-noodles.html
+++ b/recipes/chicken-noodles.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chicken Noodles</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Chicken Noodles</h1>
+    <img src="/assets/Chicken-Hakka-Noodles-2-3.jpg" alt="Delish!" width="500px">
+    <p>Idk what description I can write for chicken noodles. <br>I guess it is just something you need to have to truly appreciate.<br> Or maybe I'm too awful at describing food. Lol!</p>
+    <ul class="ingredients-list"><strong>Ingredients</strong>
+        <li>Thin chicken strips</li>
+        <li>Pepper powder</li>
+        <li>Salt</li>
+        <li>Soya sauce</li>
+        <li>Spice powder</li>
+        <li>Water</li>
+    </ul>
+    <dl>
+        <dt><b>Step - 1</b></dt>
+        <dd>Cut chicken to thin strips or bite sized pieces. <br>Large chunks of chicken will not get cooked faster and tends to turn hard. <br>Add the chicken to a bowl. Add in pepper powder, salt, soya sauce and spice powder <br>– five spice powder or garam masala.</dd>
+        <dt><b>Step - 2</b></dt>
+        <dd>Marinate this well. Cover and set aside till the noodles are cooked. <br>You can also refrigerate this upto 24 hours and use when needed. <br>In restaurants they also use little corn <br>starch or potato starch or even egg to coat the chicken. <br>This helps to retain the juices and yield very tender and soft chicken.</dd>
+        <dt><b>Step - 3</b></dt>
+        <dd>Cut chicken to thin strips or bite sized pieces. <br>Large chunks of chicken will not get cooked faster and tends to turn hard. <br>Add the chicken to a bowl. Add in pepper powder, salt, soya sauce and spice powder <br>– five spice powder or garam masala.</dd>
+        <dt><b>Step - 4</b></dt>
+        <dd>Cut chicken to thin strips or bite sized pieces. <br>Large chunks of chicken will not get cooked faster and tends to turn hard. <br>Add the chicken to a bowl. Add in pepper powder, salt, soya sauce and spice powder <br>– five spice powder or garam masala.</dd>
+        <dt><b>Step - 5</b></dt>
+        <dd>Cut chicken to thin strips or bite sized pieces. <br>Large chunks of chicken will not get cooked faster and tends to turn hard. <br>Add the chicken to a bowl. Add in pepper powder, salt, soya sauce and spice powder <br>– five spice powder or garam masala.</dd>
+        <dt><b>Step - 6</b></dt>
+        <dd>Cut chicken to thin strips or bite sized pieces. <br>Large chunks of chicken will not get cooked faster and tends to turn hard. <br>Add the chicken to a bowl. Add in pepper powder, salt, soya sauce and spice powder <br>– five spice powder or garam masala.</dd>
+        <dt><b>Step - 7</b></dt>
+        <dd>Cut chicken to thin strips or bite sized pieces. <br>Large chunks of chicken will not get cooked faster and tends to turn hard. <br>Add the chicken to a bowl. Add in pepper powder, salt, soya sauce and spice powder <br>– five spice powder or garam masala.</dd>
+    </dl>
 </body>
 </html>
