Added a picture, and heading for the potato steak recipe. And saving a few more changes made to the root html and stylesheet

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/chicken-noodles.html">Chicken Noodles</a>
+    <a href="./recipes/chicken-veggies.html">Chicken Veggies</a>
+    <a href="./recipes/potato-steak.html">Potato Steak</a>
 </body>
 </html>
