--- a/recipes/chicken-noodles.html
+++ b/recipes/chicken-noodles.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Chicken Noodles</h1>
+    <h1 id="header">Chicken Noodles</h1>
     <img src="/assets/Chicken-Hakka-Noodles-2-3.jpg" alt="Delish!" width="500px">
-    <p>Idk what description I can write for chicken noodles. <br>I guess it is just something you need to have to truly appreciate.<br> Or maybe I'm too awful at describing food. Lol!</p>
+    <p>Idk what description I can write for chicken noodles. <br>I guess it is just something you need to have to truly appreciate. <br>Or maybe I'm too awful at describing food. Lol!</p>
     <ul class="ingredients-list"><strong>Ingredients</strong>
         <li>Thin chicken strips</li>
         <li>Pepper powder</li>
@@ -20,19 +20,21 @@
     </ul>
     <dl>
         <dt><b>Step - 1</b></dt>
-        <dd>Cut chicken to thin strips or bite sized pieces. <br>Large chunks of chicken will not get cooked faster and tends to turn hard. <br>Add the chicken to a bowl. Add in pepper powder, salt, soya sauce and spice powder <br>– five spice powder or garam masala.</dd>
+        <dd>Cut chicken to thin strips or bite sized pieces.  Large chunks of chicken will not get cooked faster and tends to turn hard.  Add the chicken to a bowl. Add in pepper powder, salt, soya sauce and spice powder  – five spice powder or garam masala.</dd>
         <dt><b>Step - 2</b></dt>
-        <dd>Marinate this well. Cover and set aside till the noodles are cooked. <br>You can also refrigerate this upto 24 hours and use when needed. <br>In restaurants they also use little corn <br>starch or potato starch or even egg to coat the chicken. <br>This helps to retain the juices and yield very tender and soft chicken.</dd>
+        <dd>Marinate this well. Cover and set aside till the noodles are cooked.  You can also refrigerate this upto 24 hours and use when needed.  In restaurants they also use little corn  starch or potato starch or even egg to coat the chicken.  This helps to retain the juices and yield very tender and soft chicken.</dd>
         <dt><b>Step - 3</b></dt>
-        <dd>Bring 2 to 2.5 liters of water to a boil in a large pot. <br>Add the noodles. Please follow the instructions on the pack for timing, <br>if salt and oil are needed. If needed then add 1 tbsp oil and salt.</dd>
+        <dd>Bring 2 to 2.5 liters of water to a boil in a large pot.  Add the noodles. Please follow the instructions on the pack for timing,  if salt and oil are needed. If needed then add 1 tbsp oil and salt.</dd>
         <dt><b>Step - 4</b></dt>
-        <dd>Boil the noodles until al dente. The noodles must be firm and partially boiled. <br>While the noodles boil, prepare the veggies.</dd>
+        <dd>Boil the noodles until al dente. The noodles must be firm and partially boiled.  While the noodles boil, prepare the veggies.</dd>
         <dt><b>Step - 5</b></dt>
-        <dd>When done drain them to a colander immediately. <br>If needed you can rinse the noodles with cold water it depends on the kind used. <br>Add 1 tsp oil and smear it all over the noodles. This prevents them from sticking.</dd>
+        <dd>When done drain them to a colander immediately.  If needed you can rinse the noodles with cold water it depends on the kind used.  Add 1 tsp oil and smear it all over the noodles. This prevents them from sticking.</dd>
         <dt><b>Step - 6</b></dt>
-        <dd>Add 1 tbsp oil to a wok. I do not own a wok, so I use a pan. <br>A well seasoned bare cast iron pan works well, if you have one you can use it.<br>When the oil turns hot, add garlic. After 30 seconds, add chicken.</dd>
+        <dd>Add 1 tbsp oil to a wok. I do not own a wok, so I use a pan.  A well seasoned bare cast iron pan works well, if you have one you can use it. When the oil turns hot, add garlic. After 30 seconds, add chicken.</dd>
         <dt><b>Step - 7</b></dt>
-        <dd>Fry the chicken until completely cooked.<br>If you see the pan too dry, then add 1 to 2 tbsp of hot water.<br>Using cold water turns the chicken hard. <br>At the end of this step, chicken should be cooked well and must be <br>able to cut it easily with the wooden spatula.</dd>
+        <dd>Fry the chicken until completely cooked. If you see the pan too dry, then add 1 to 2 tbsp of hot water. Using cold water turns the chicken hard.  At the end of this step, chicken should be cooked well and must be  able to cut it easily with the wooden spatula.</dd>
     </dl>
+    <a href="../index.html">Return to main page</a>
+    <a href="#header">To top</a>
 </body>
 </html>
